--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <button class="start-box-number">2</button>
             <button class="start-box-number">3</button>
         </div>
-        <button class="start-box-button buttom">Старт</button>
+        <button class="start-box-button button">Старт</button>
     </div>
     
 </body>
