--- a/index.html
+++ b/index.html
@@ -9,12 +9,22 @@
 <body>
     <div class="start-box">
         <h1 class="start-box-text">Выбери сложность</h1>
-        <div class="start-box-flex">
-            <button class="start-box-number">1</button>
-            <button class="start-box-number">2</button>
-            <button class="start-box-number">3</button>
-        </div>
+        <form class="start-box-flex">
+            <label>
+                <input type="radio" class="start-box-radio" id="option1" name="option" value="1">
+                <div class="start-box-number">1</div>
+            </label>
+            <label>
+                <input type="radio" class="start-box-radio" id="option1" name="option" value="2">
+                <div class="start-box-number">2</div>
+            </label>         
+            <label>
+                <input type="radio" class="start-box-radio" id="option1" name="option" value="3">
+                <div class="start-box-number">3</div>
+            </label>
+          </form>
         <button class="start-box-button button">Старт</button>
+
     </div>
     
 </body>
