--- a/index.html
+++ b/index.html
@@ -7,28 +7,10 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <div class="start-box">
-        <h1 class="start-box-text">Выбери сложность</h1>
-        <form>
-            <div class="start-box-flex">
-                <label>
-                    <input type="radio" class="start-box-radio" id="option1" name="option" value="1">
-                    <div class="start-box-number">1</div>
-                </label>
-                <label>
-                    <input type="radio" class="start-box-radio" id="option1" name="option" value="2">
-                    <div class="start-box-number">2</div>
-                </label>
-                <label>
-                    <input type="radio" class="start-box-radio" id="option1" name="option" value="3">
-                    <div class="start-box-number">3</div>
-                </label>
-            </div>
-            <button class="start-box-button button">Старт</button>
-          </form>
-
+    <div id="app">
 
     </div>
     
 </body>
+<script type="module" src="./index.js"></script>
 </html>
