создание массива карт

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="game-time">
                 <span class="game-time-min">min</span>
                 <span class="game-time-sek">sek</span>
-                00.00
+                <div id="timeValue">00.00</div>
             </div>
             <button class="button">Начать заново</button>
         </header>
