--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
             </div>
             <button class="button">Начать заново</button>
         </header>
-        <div class="grid back-side">
-        </div>
+        <div class="grid back-side"></div>
         <div class="grid front-side"></div>
     </div>
 </body>
