позиц-ние сторон, обработка клика по рубашке

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                     </div>
                 </form>
                 <button class="start-box-button button">Старт</button>
+
             </div>
         </div>
     </div>
@@ -42,8 +43,14 @@
             </div>
             <button class="button">Начать заново</button>
         </header>
-        <div class="grid back-side"></div>
-        <div class="grid front-side"></div>
+        <div class="cards-container">
+            <div class="grid back-side">
+                <!-- Рендерится -->
+            </div>
+            <div class="grid front-side">
+                <!-- Рендерится -->
+            </div>
+        </div>
     </div>
 </body>
 <script type="module" src="./index.js"></script>
