создание уровней игры и их рендер

--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
                 <form>
                     <div class="start-box-flex">
                         <label>
-                            <input type="radio" class="start-box-radio" id="option1" name="option" value="1">
+                            <input type="radio" class="start-box-radio" id="option1" name="option" value="3">
                             <div class="start-box-number">1</div>
                         </label>
                         <label>
-                            <input type="radio" class="start-box-radio" id="option2" name="option" value="2">
+                            <input type="radio" class="start-box-radio" id="option2" name="option" value="6">
                             <div class="start-box-number">2</div>
                         </label>
                         <label>
-                            <input type="radio" class="start-box-radio" id="option3" name="option" value="3">
+                            <input type="radio" class="start-box-radio" id="option3" name="option" value="9">
                             <div class="start-box-number">3</div>
                         </label>
                     </div>
@@ -41,9 +41,9 @@
                 <span class="game-time-sek">sek</span>
                 <div id="timeValue">00.00</div>
             </div>
-            <button class="button">Начать заново</button>
+            <button class="button" id="button">Начать заново</button>
         </header>
-        <div class="cards-container">
+        <div class="cont">
             <div class="grid back-side">
                 <!-- Рендерится -->
             </div>
