согдание логики игры

--- a/index.html
+++ b/index.html
@@ -43,13 +43,8 @@
             </div>
             <button class="button" id="button">Начать заново</button>
         </header>
-        <div class="cont">
-            <div class="grid back-side">
-                <!-- Рендерится -->
-            </div>
-            <div class="grid front-side">
-                <!-- Рендерится -->
-            </div>
+        <div class="game-container">
+            <!-- Рендерится -->
         </div>
     </div>
 </body>
