продолжение игр после правильного выбора карт

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Card-game</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./styles.css" type="text/css">
 </head>
 
 <body>
@@ -39,7 +39,7 @@
             <div class="game-time">
                 <span class="game-time-min">min</span>
                 <span class="game-time-sek">sek</span>
-                <div id="timeValue">00.00</div>
+                <div id="timeValue">00.330</div>
             </div>
             <button class="button" id="button">Начать заново</button>
         </header>
