начало создания экрана конца игры

--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@
             <!-- Рендерится -->
         </div>
     </div>
+    <div class="result">
+        <img src="./image/dead.png" alt="no">
+        <h1>Вы проиграли</h1>
+        <p class="result-text">Затраченное время</p>
+        <p>Время </p>
+        <button class="button">Играть снова</button>
+    </div>
 </body>
 <script type="module" src="./index.js"></script>
 
