--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Card-game</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
@@ -49,6 +50,8 @@
     <div class="result">
 
     </div>
+    <script src="./index.js"></script>
+
 </body>
 
 
